# userencrypt

./: .gitignore  Cargo.toml  build.rs  settings.gradle.kts
.github/workflows/: release.yml
core/: build.gradle.kts  settings.gradle.kts
core/gradle/wrapper/: gradle-wrapper.properties
core/src/main/kotlin/org/turbomc/userencrypt/core/: NativeProvisioner.kt  UserEncryptCore.kt
paper/: build.gradle.kts  build.gradle.kts.bak  settings.gradle.kts
paper/src/main/kotlin/org/turbomc/userencrypt/: Userencrypt.kt
paper/src/main/kotlin/org/turbomc/userencrypt/paper/: UserEncryptPaper.kt
paper/src/main/kotlin/uniffi/userencrypt/: userencrypt.kt
paper/src/main/resources/: paper-plugin.yml
schema/: session.surql  user.surql
src/: auth.rs  lib.rs  migration.rs  runtime.rs  userencrypt.udl
src/models/: config.rs  mod.rs  session.rs  user.rs
src/modules/: session.rs  user.rs
