[package]
name = "userencrypt"
version = "0.1.0"
edition = "2024"

[lib]
name = "userencrypt"
crate-type = ["cdylib"]


[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "3.0.4", features = ["kv-surrealkv"], default-features = false }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time"] }
uniffi = { version = "0.31.0", features = ["cli", "tokio"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
